# zprize-wasm-msm

./: .gitignore  Cargo.toml  README.md  package-lock.json  summary
benches/: elliptic_curve.rs  ff.rs  ff_refactor.rs  glv.rs
ffjavascript/: .gitignore  README.md  package-lock.json  package.json
ffjavascript-master/: package-lock.json  package.json
ffjavascript-master/src/: bls12381.js  bn128.js  wasm_curve.js
ffjavascript-master/test/: algebra.js  bn128.js  ff_ec.js
ffjavascript/src/: engine.js  engine_batchconvert.js  engine_multiexp.js  engine_multiexp_batchaffine.js  threadman.js  threadman_thread.js
ffjavascript/test/: bls12381.js  bn128 copy.js  bn128.js  bn128_msm.js
finite_field/: Cargo.toml  README.md
finite_field/benches/: check_ff.rs  elliptic_ops.rs  ff.rs
finite_field/src/: check_ff.rs  lib.rs  ops.rs
glv/: README.md  decompose_scalar.rs  endomorphism.rs  generate_beta_lambda.py  generate_glv_basis.py
others/: codebuilder.js  modulebuilder.js  protoboard.js
src/: check_ec_affine.rs  check_ec_projective.rs  check_ff.rs  check_tmp.rs  ec.rs  elliptic_ops.rs  ff.rs  lib.rs  main.rs  ops.rs
tests/: ec.rs  ec_add_wasm.rs  ec_timesscalar_wasm.rs  ff.rs  web.rs
wasmcurves/: .gitignore  package-lock.json  package.json
wasmsnark-master/: package-lock.json  package.json
www/: README.md  env.d.ts  index copy.js  index.html  index.js  index_copy copy.js  index_copy.js  index_wasm_test.js  package.json  protoboard.js  tmp.wasm  tmp_ec_wasmcurve.wasm  wasm_zkp_challenge_bg.js  wasm_zkp_challenge_bg.wasm  webpack.config.js
(+59 files in other folders)
